# siglab

./: .gitignore  pyproject.toml  setup.cfg
ai/: ollama-deepseek-openclaw.txt
ai/tests/: hello_deepseek_ollama.py  hello_deepseek_rag_websearch.py  hello_deepseek_requests.py
data/: sample_btc_candles.csv
data/nasdaq/: NASDAQ_hist_AAPL.csv  NASDAQ_hist_AMZN.csv  NASDAQ_hist_BABA.csv  NASDAQ_hist_GOOG_classC.csv  NASDAQ_hist_IVV.csv  NASDAQ_hist_META.csv  NASDAQ_hist_MSFT.csv  NASDAQ_hist_MSTR.csv  NASDAQ_hist_NVDA.csv  NASDAQ_hist_SPY.csv  NASDAQ_hist_TSLA.csv  NASDAQ_hist_VOO.csv
py/market_data_providers/: candles_provider.py  candles_ta_provider.py  test_provider.py
py/tests/integration/: market_data_util_tests.py
py/util/: retry_util.py
siglab_py/: LambdaMapping - backtest to StrategyBase.xlsx  README.md  constants.py  deribit_openinterest.ipynb  eyeball_BTC_RSIMFI.ipynb  headlines_rss_source.txt  market_impact_keywords.json  readme.pypi.txt  requirements.txt  siglab_icon.py  ticker_change_map.json
siglab_py/alerts/: aggressive_move_alert.py
siglab_py/algo/: macdrsi_crosses_15m_tc_strategy.py  one_shot_strategy.py  orderhist_cache_viewer.ipynb  strategy_base.py  strategy_executor.py  strategy_master.py  tp_algo.py
siglab_py/backtests/: backtest_core.py  coinflip_15m_crypto.ipynb  coinflip_15m_crypto.py  fibonacci_d_mv_crypto.ipynb  fibonacci_d_mv_crypto.py  macdrsi_15m_tc_crypto.ipynb  macdrsi_crosses_15m_tc_crypto.py
siglab_py/exchanges/: any_exchange.py  binance.py  deribit.py  futubull.py  lighter.py
siglab_py/market_data_providers/: aggregated_orderbook_provider.py  candles_provider.py  candles_ta_provider.py  ccxt_candles_ta_to_csv.py  deribit_options_expiry_provider.py  funding_rate_provider.py  futu_candles.py  futu_candles_ta_to_csv.py  google_monitor.py  headlines_provider.py  headlines_rss_source.txt  historical_trades_provider.py  orderbooks_provider.py  rss_headlines_provider.py  simple_price_alert.py  test_provider.py  tg_monitor.py  trigger_provider.py
siglab_py/ordergateway/: client.py  encrypt_keys_util.py  gateway.py  test_ordergateway.py
siglab_py/tests/manual/: Check FIB618 calc.xlsx  (+23 more)
siglab_py/util/: analytic_util.py  aws_util.py  collection_util.py  datetime_util.py  discord_notification_util.py  io_util.py  market_data_util.py  misc_util.py  module_util.py  notification_util.py  retry_util.py  simple_math.py  simple_str.py  slack_notification_util.py  trading_util.py
(+8 files in other folders)
