[metadata]
name = siglab_py
version = 0.2.00
description = Market data fetches, TA calculations and generic order gateway.
author = r0bbarh00d
author_email = r0bbarh00d@gmail.com
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9.19
install_requires =
    python-dotenv
    dotmap
    typing_extensions
    arrow
    tzlocal
    nest_asyncio
    pandas
    numpy
    boto3
    web3
    ccxt
    ccxtpro
    yfinance
    yahoofinancials
    hurst
    redis
    redis-py-cluster
    kafka-python
